Implementação Docker + PostgreSQL

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,24 @@
-OPENAI_API_KEY=
+﻿# ============================================
+# CONFIGURAÇÕES DO BANCO DE DADOS POSTGRESQL
+# ============================================
+DB_HOST=postgres
+DB_PORT=5432
+DB_NAME=connect_gamers
+DB_USER=postgres
+DB_PASSWORD=connectgamers
+
+# ============================================
+# CONFIGURAÇÕES DO SERVIDOR
+# ============================================
+PORT=5000
+LOG_DEDUP_MS=0
+
+# ============================================
+# OPENAI API (Para moderação IA)
+# ============================================
+OPENAI_API_KEY=sua_chave_aqui
+
+# ============================================
+# NODE ENVIRONMENT
+# ============================================
+NODE_ENV=development
