--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,32 @@ backend/node_modules
 
 # misc
 .DS_Store
+
+# environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
-.env
+backend/.env
 
+# logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+logs/
+
+# Docker
+docker-compose.override.yml
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+Thumbs.db
+.DS_Store
