--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,17 @@
     "main": "server.js",
     "type": "commonjs",
     "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^17.2.1",
         "express": "^4.18.2",
+        "express-rate-limit": "^8.1.0",
         "openai": "^4.56.0",
-        "bcrypt": "^5.1.1"
+        "pg": "^8.16.3"
     },
     "devDependencies": {
         "nodemon": "^3.1.10"
