--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2",
-    "react-scripts": "5.0.1"
-
+    "react-router-dom": "^7.9.4",
+    "react-scripts": "^0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
