--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4",
-    "react-scripts": "^0.0.0"
+        "react-router-dom": "^7.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,8 +45,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "concurrently": "^9.2.0",
+    "concurrently": "^9.2.1",
     "postcss": "^8.5.5",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.17"
   }
 }
