Integração Face++ com UI profissional e verificação facial
- Criar serviço facePlusPlusService.js com detect, compare e search
- Atualizar rota de verificação para usar Face++ ao invés de Azure
- Adicionar colunas face_token, status_verificacao, data_verificacao no banco
- Criar FacialVerificationPro.jsx com oval guide e captura profissional
- Remover WebRTC, usar native file input com capture="user"
- Configurar ambiente com credenciais Face++
- Adicionar form-data dependency

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,6 +19,17 @@ LOG_DEDUP_MS=0
 OPENAI_API_KEY=sua_chave_aqui
 
 # ============================================
+# AZURE FACE API (Para verificação facial)
+# ============================================
+AZURE_FACE_ENDPOINT=https://your-face-resource.cognitiveservices.azure.com
+AZURE_FACE_SUBSCRIPTION_KEY=your_azure_face_api_key_here
+
+# ============================================
+# FRONTEND URL (Para redirecionamento do QR Code)
+# ============================================                                                                                                                                                      
+FRONTEND_URL=CCL
+
+# ============================================
 # NODE ENVIRONMENT
 # ============================================
 NODE_ENV=development
