--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,18 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "axios": "^1.12.2",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^17.2.1",
         "express": "^4.18.2",
         "express-rate-limit": "^8.1.0",
+        "form-data": "^4.0.1",
+        "multer": "^2.0.2",
         "openai": "^4.56.0",
-        "pg": "^8.16.3"
+        "pg": "^8.16.3",
+        "qrcode": "^1.5.4",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.10"
