--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "face-api.js": "^0.22.2",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-        "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
