Verificação FaceID e HTTPS

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,13 @@ docker-compose.override.yml
 # OS
 Thumbs.db
 .DS_Store
+
+# SSL Certificates
+*.pem
+*.key
+*.crt
+*.cert
+backend/*.pem
+backend/*.key
+public/*.pem
+public/*.key
