--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,8 +21,8 @@ OPENAI_API_KEY=sua_chave_aqui
 # ============================================
 # AZURE FACE API (Para verificação facial)
 # ============================================
-AZURE_FACE_ENDPOINT=https://your-face-resource.cognitiveservices.azure.com
-AZURE_FACE_SUBSCRIPTION_KEY=your_azure_face_api_key_here
+FACEPP_API_KEY=sua_chave_aqui
+FACEPP_API_SECRET=sua_chave_aqui
 
 # ============================================
 # FRONTEND URL (Para redirecionamento do QR Code)
@@ -33,3 +33,6 @@ FRONTEND_URL=CCL
 # NODE ENVIRONMENT
 # ============================================
 NODE_ENV=development
+
+# FACE DEV MODE (usar fallback local p/ testes)
+FACE_DEV_MODE=true
