--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -12,15 +11,11 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "face-api.js": "^0.22.2",
-    "framer-motion": "^11.15.0",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4",
-    "require": "^2.4.20",
-    "uuid": "^8.3.2"
+    "react-router-dom": "^7.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
