Verificação de Duplicidade e Readme

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,16 @@
 # ============================================
 # REACT APP ENVIRONMENT VARIABLES
 # ============================================
+# NOTA: Execute .\setup-ssl.ps1 para configurar automaticamente!
+# O script detecta seu IP e atualiza este arquivo.
 
 # API Backend URL (for mobile testing)
-REACT_APP_API_URL=seu_backend_aqui
+REACT_APP_API_URL=https://SEU_IP_AQUI:5000
 
 # HTTPS Configuration
 HTTPS=true
-SSL_CRT_FILE=sua_chave_ssl
-SSL_KEY_FILE=sua_chave_ssl
+SSL_CRT_FILE=ssl/SEU_IP_AQUI+1.pem
+SSL_KEY_FILE=ssl/SEU_IP_AQUI+1-key.pem
 
 # Disable automatic browser opening
 BROWSER=none
