--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,38 +1,34 @@
 ﻿# ============================================
-# CONFIGURAÇÕES DO BANCO DE DADOS POSTGRESQL
+# BACKEND ENVIRONMENT VARIABLES
 # ============================================
+# NOTA: Execute .\setup-ssl.ps1 para configurar FRONTEND_URL e SERVER_IP automaticamente!
+
+# CONFIGURAÇÕES DO BANCO DE DADOS POSTGRESQL
 DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=connect_gamers
 DB_USER=postgres
 DB_PASSWORD=connectgamers
 
-# ============================================
 # CONFIGURAÇÕES DO SERVIDOR
-# ============================================
 PORT=5000
 LOG_DEDUP_MS=0
 
-# ============================================
 # OPENAI API (Para moderação IA)
-# ============================================
 OPENAI_API_KEY=sua_chave_aqui
 
-# ============================================
-# AZURE FACE API (Para verificação facial)
-# ============================================
+# FACE++ API (Para verificação facial)
 FACEPP_API_KEY=sua_chave_aqui
 FACEPP_API_SECRET=sua_chave_aqui
 
-# ============================================
 # FRONTEND URL (Para redirecionamento do QR Code)
-# ============================================                                                                                                                                                      
-FRONTEND_URL=CCL
+FRONTEND_URL=https://SEU_IP_AQUI:3000
 
-# ============================================
+# SERVER IP (Para certificados SSL - configurado automaticamente pelo script)
+SERVER_IP=SEU_IP_AQUI
+
 # NODE ENVIRONMENT
-# ============================================
 NODE_ENV=development
 
 # FACE DEV MODE (usar fallback local p/ testes)
-FACE_DEV_MODE=true
+FACE_DEV_MODE=false
